kubernetes/apps/base/default/echo/ciliumnetworkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: echo
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: echo
  egress:
    # Allow DNS
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP

    # Allow Kubernetes API - why?
    - toEntities:
        - kube-apiserver

    # Allow egress to envoy gateways (internal + external)
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: network
            gateway.envoyproxy.io/owning-gateway-name: external
